<?xml version = "1.0" encoding = "utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = ".ui.detail.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/ud_detail_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        tools:src="@tools:sample/avatars" />

    <TextView

        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/ud_detail_username"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/ud_detail_avatar"
        android:layout_marginTop = "10dp"
        android:textSize = "20sp"
        android:textStyle = "bold"
        android:text = "@string/username" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/ud_detail_name"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/ud_detail_username"
        android:text = "@string/name"
        android:textSize = "15sp" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/ud_detail_repository"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/ud_detail_name"
        android:layout_marginTop = "15dp"
        android:text = "@string/repository"
        android:textSize = "15sp" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/detail_location"
        app:layout_constraintBottom_toTopOf = "@+id/ud_tabs"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/ud_detail_repository"
        android:text = "@string/location"
        android:textSize = "15sp" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/ud_tabs"
        android:layout_marginTop = "20dp"
        android:minHeight = "?actionBarSize"
        app:layout_constraintTop_toBottomOf = "@+id/detail_location"
        app:tabIndicatorFullWidth = "false"
        app:tabIndicatorHeight = "2dp"
        app:tabMode = "fixed"
        app:tabRippleColor = "@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ud_tabs"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width = "match_parent"
        android:layout_height = "0dp"
        android:id = "@+id/ud_view_pager"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/ud_tabs"
        android:background = "@color/white" >

    </androidx.viewpager2.widget.ViewPager2>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="18dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>